# assignment

./: .gitignore  CMakeLists.txt  README.md  assignment.md  build.sh  run_client.sh  run_server.sh
proto/: secure_communication.options  secure_communication.proto
src/: client.cpp  common.cpp  secure_communication_test  server.cpp  shared_keys.h  test.cpp
